Fix namespaced URL on home page

--- a/LandingPage/templates/landing/home.html
+++ b/LandingPage/templates/landing/home.html
@@ -12,7 +12,7 @@
       Flexible learning systems that make understanding and retaining information easier without burning out or losing motivation over time.
     </p>
 
-    <a class="wmol-landing-cta" href="{% url 'domains' %}">
+    <a class="wmol-landing-cta" href="{% url 'landing::domains' %}">
       Learn More
     </a>
   </div>
