Anonymize testimonials + remove USUHS references + EMDP2

--- a/LandingPage/templates/landing/medicine.html
+++ b/LandingPage/templates/landing/medicine.html
@@ -303,7 +303,7 @@
     <h4>Academic background</h4>
     <p>
       Medical student. Graduated high school in 2010, enlisted in the U.S. Marine Corps, returned to
-      school in phases, completed a BS (Strategic Studies and Defense Analysis, 2019), then EMDP2 (2021)
+      school in phases, completed a BS (Strategic Studies and Defense Analysis, 2019), then a pre-med program (2021)
       before medical school. Graduated Summa Cum Laude from Norwich University.
     </p>
 
